--- a/index.html
+++ b/index.html
@@ -6,116 +6,217 @@
 <body>
 
 <script>
+
+    /* Inventory Counts */
     var muffins = 0;
-    // var cinna = 0;
-    // var bagels = 0;
-    // var donut = 0;
-    // var hotchoc = 0;
-    // var apple = 0;
-    // var pear = 0;
-    // var clementine = 0;
-    // var pizzaCombo = 0;
-    // var hotdogCombo = 0;
-    // var subCombo = 0;
+    var bagels = 0;
+    var donut = 0;
+    var hotchoc = 0;
+    var fruit = 0;
+
+    var combo = 0;
+
     var pizza = 0;
+    var cookie = 0;
+    var chips = 0;
 
-    var muffinCost = 1.5;
-    var pizzaCost = 3;
+    var drink = 0;
+    var vitwat = 0;
 
-    function pizzaInc() {
-        pizza++;
-        document.getElementById('PIZZA').value++;
-    }
+    var candy = 0;
+    var mixnmatch = 0;
+
+    /*Item Costs */
+    var muffinCost = 1;
+    var bagelCost = 1;
+    var donutCost = 1;
+    var hotchocCost = 1;
+    var fruitCost = 1;
+
+    var comboCost = 4;
+
+    var pizzaCost = 2;
+    var cookieCost = 1;
+    var chipsCost = 1;
+
+    var drinkCost = 1;
+    var vitwatCost = 2;
+
+    var candyCost = 1;
+    var mixnmatchCost = 0.50;
+
+
+    /*Increment Functions*/
+    /*======BREAKFAST========*/
     function muffinInc() {
         muffins++;
         document.getElementById('MUFF').value++;
     }
-    // function cinna() {
-    //     cinna++;
-    //     document.getElementById('cinna').value = cinna;
-    // }
-    // function bagels() {
-    //     bagels++;
-    //     document.getElementById('bagels').value = bagels;
-    // }
-    // function donut() {
-    //     donut++;
-    //     document.getElementById('donut').value = donut;
-    // }
-    // function apple() {
-    //     apple++;
-    //     document.getElementById('apple').value = apple;
-    // }
-    // function pear() {
-    //     pear++;
-    //     document.getElementById('pear').value = pear;
-    // }
-    // function clementine() {
-    //     clementine++;
-    //     document.getElementById('clementine').value = clementine;
-    // }
+    function bagelsInc() {
+        bagels++;
+        document.getElementById('BAGELS').value++;
+    }
+    function donutInc() {
+        donut++;
+        document.getElementById('DONUT').value++;
+    }
+    function hotchocInc() {
+        hotchoc++;
+        document.getElementById('HOTCHOC').value++;
+    }
+    function fruitInc() {
+        fruit++;
+        document.getElementById('FRUIT').value++;
+    }
 
+    /*========COMBO=======*/
+    function comboInc() {
+        combo++;
+        document.getElementById('COMBO').value++;
+    }
+
+    /*========LUNCH========*/
+    function pizzaInc() {
+        pizza++;
+        document.getElementById('PIZZA').value++;
+    }
+    function cookieInc() {
+        cookie++;
+        document.getElementById('COOKIE').value++;
+    }
+    function chipsInc() {
+        chips++;
+        document.getElementById('CHIPS').value++;
+    }
+
+    /*=======DRINKS=======*/
+    function drinkInc() {
+        drink++;
+        document.getElementById('DRINK').value++;
+    }
+    function vitwatInc() {
+        vitwat++;
+        document.getElementById('VITWAT').value++;
+    }
+
+    /*======CANDY=========*/
+    function candyInc() {
+        candy++;
+        document.getElementById('CANDY').value++;
+    }
+    function mixnmatchInc() {
+        mixnmatch++;
+        document.getElementById('MIX').value++;
+    }
+
+    
+    /* Total Function */
     function totalCost(){
         var tot = 0;
-        tot = tot + document.getElementById('PIZZA').value*pizzaCost;
         tot = tot + document.getElementById('MUFF').value*muffinCost;
+        tot = tot + document.getElementById('BAGELS').value*bagelCost;
+        tot = tot + document.getElementById('DONUT').value*donutCost;
+        tot = tot + document.getElementById('HOTCHOC').value*hotchocCost;
+        tot = tot + document.getElementById('FRUIT').value*fruitCost;
+        tot = tot + document.getElementById('COMBO').value*comboCost;
+        tot = tot + document.getElementById('PIZZA').value*pizzaCost;
+        tot = tot + document.getElementById('COOKIE').value*cookieCost;
+        tot = tot + document.getElementById('CHIPS').value*chipsCost;
+        tot = tot + document.getElementById('DRINK').value*drinkCost;
+        tot = tot + document.getElementById('VITWAT').value*vitwatCost;
+        tot = tot + document.getElementById('CANDY').value*candyCost;
+        tot = tot + document.getElementById('MIX').value*mixnmatchCost;
+
         document.getElementById("TOTAL").value = tot;
         tot = 0;
     }
 
     function resetTotal(){
-        document.getElementById("PIZZA").value = 0;
         document.getElementById("MUFF").value = 0;
+        document.getElementById("BAGELS").value = 0;
+        document.getElementById("DONUT").value = 0;
+        document.getElementById("HOTCHOC").value = 0;
+        document.getElementById("FRUIT").value = 0;
+        document.getElementById("COMBO").value = 0;
+        document.getElementById("PIZZA").value = 0;
+        document.getElementById("COOKIE").value = 0;
+        document.getElementById("CHIPS").value = 0;
+        document.getElementById("DRINK").value = 0;
+        document.getElementById("VITWAT").value = 0;
+        document.getElementById("CANDY").value = 0;
+        document.getElementById("MIX").value = 0;
         document.getElementById("TOTAL").value = 0;
     }
 </script>
 
 <h1>OMS Fundraiser Cash Register</h1>
 
-<button style="height:70px;width:100px" onclick="pizzaInc();">Pizza</button>
-<input style="height:70px;width:100px" type="text" id="PIZZA" value="0"></input>
-
-<br><br>
+<h2>Breakfast</h2>
 
 <button style="height:70px;width:100px" onclick="muffinInc();">Muffin</button>
 <input style="height:70px;width:100px" type="text" id="MUFF" value="0"></input>
 
-<br><br>
+<button style="height:70px;width:100px" onclick="bagelsInc();">Bagel</button>
+<input style="height:70px;width:100px" type="text" id="BAGELS" value="0"></input>
 
-<!-- <button onclick="cinna();">Cinnamon Roll</button>
-<input type="text" id="cinna" value="0"></input>
-
-<br><br>
-
-<button onclick="bagels();">Bagel</button>
-<input type="text" id="bagels" value="0"></input>
+<button style="height:70px;width:100px" onclick="donutInc();">Donut</button>
+<input style="height:70px;width:100px" type="text" id="DONUT" value="0"></input>
 
 <br><br>
 
-<button onclick="donut();">Donut</button>
-<input type="text" id="donut" value="0"></input>
+<button style="height:70px;width:100px" onclick="hotchocInc();">Hot Chocolate</button>
+<input style="height:70px;width:100px" type="text" id="HOTCHOC" value="0"></input>
+
+<button style="height:70px;width:100px" onclick="fruitInc();">Fruit</button>
+<input style="height:70px;width:100px" type="text" id="FRUIT" value="0"></input>
 
 <br><br>
 
-<button onclick="apple();">Apple</button>
-<input type="text" id="apple" value="0"></input>
+<h2>Lunch</h2>
+
+<button style="height:70px;width:100px" onclick="comboInc();">Combo</button>
+<input style="height:70px;width:100px" type="text" id="COMBO" value="0"></input>
+
+
+<button style="height:70px;width:100px" onclick="pizzaInc();">Pizza</button>
+<input style="height:70px;width:100px" type="text" id="PIZZA" value="0"></input>
+
+<button style="height:70px;width:100px" onclick="cookieInc();">Cookie</button>
+<input style="height:70px;width:100px" type="text" id="COOKIE" value="0"></input>
 
 <br><br>
 
-<button onclick="pear();">Pear</button>
-<input type="text" id="pear" value="0"></input>
+<button style="height:70px;width:100px" onclick="chipsInc();">Chips</button>
+<input style="height:70px;width:100px" type="text" id="CHIPS" value="0"></input>
 
 <br><br>
 
-<button onclick="clementine();">Clementine</button>
-<input type="text" id="clementine" value="0"></input>
+<h2>Drinks</h2>
 
-<br><br> -->
+<button style="height:70px;width:100px" onclick="drinkInc();">Drink</button>
+<input style="height:70px;width:100px" type="text" id="DRINK" value="0"></input>
+
+<button style="height:70px;width:100px" onclick="vitwatInc();">Vitamin Water</button>
+<input style="height:70px;width:100px" type="text" id="VITWAT" value="0"></input>
+
+<br><br>
+
+<h2>Candies</h2>
+
+<button style="height:70px;width:100px" onclick="candyInc();">Candy</button>
+<input style="height:70px;width:100px" type="text" id="CANDY" value="0"></input>
+
+<button style="height:70px;width:100px" onclick="mixnmatchInc();">Mix n Match</button>
+<input style="height:70px;width:100px" type="text" id="MIX" value="0"></input>
+
+<br><br>
+
+<!-- ====================Total========================= -->
+
+<h2>Totals</h2>
 
 <button style="height:70px;width:100px" onclick="totalCost();">Total</button>
 <input style="height:70px;width:100px" type="text" id="TOTAL" value="0"></input>
-
-<br><br>
 
 <button style="height:70px;width:100px" onclick="resetTotal();">Reset</button>
 
