--- a/index.html
+++ b/index.html
@@ -197,9 +197,9 @@
 
         <button id="button" onclick="pizzaInc();">Pizza</button>
 
-        <button id="button" onclick="cookieInc();">Chips</button>
+        <button id="button" onclick="chipsInc();">Chips</button>
 
-        <button id="button" onclick="chipsInc();">Cookie</button>
+        <button id="button" onclick="cookieInc();">Cookie</button>
 
         <br><br>
 
