--- a/index.html
+++ b/index.html
@@ -183,45 +183,45 @@
 <div>
     <div id="buttondiv">
 
-        <button id="button" onclick="muffinInc();">Muffin/Bagel</button>
+        <button id="breakfast" onclick="muffinInc();">Muffin/Bagel</button>
 
-        <button id="button" onclick="bagelsInc();">Donut</button>
+        <button id="breakfast" onclick="bagelsInc();">Donut</button>
 
-        <button id="button" onclick="hotchocInc();">Hot Chocolate</button>
+        <button id="breakfast" onclick="hotchocInc();">Hot Chocolate</button>
 
-        <button id="button" onclick="fruitInc();">Fruit</button>
-
-        <br><br>
-
-        <button id="button" onclick="comboInc();">Combo</button>
-
-        <button id="button" onclick="pizzaInc();">Pizza</button>
-
-        <button id="button" onclick="chipsInc();">Chips</button>
-
-        <button id="button" onclick="cookieInc();">Cookie</button>
+        <button id="breakfast" onclick="fruitInc();">Fruit</button>
 
         <br><br>
 
-        <button id="button" onclick="drinkInc();">Drink</button>
+        <button id="lunch" onclick="comboInc();">Combo</button>
 
-        <button id="button" onclick="vitwatInc();">Vitamin Water</button>
+        <button id="lunch" onclick="pizzaInc();">Pizza</button>
 
-        <button id="button" onclick="candyInc();">Candy</button>
+        <button id="lunch" onclick="chipsInc();">Chips</button>
 
-        <button id="button" onclick="mixnmatchInc();">Mix n Match</button>
+        <button id="lunch" onclick="cookieInc();">Cookie</button>
+
+        <br><br>
+
+        <button id="drink" onclick="drinkInc();">Drink</button>
+
+        <button id="drink" onclick="vitwatInc();">Vitamin Water</button>
+
+        <button id="candy" onclick="candyInc();">Candy</button>
+
+        <button id="candy" onclick="mixnmatchInc();">Mix n Match</button>
 
         <br><br>
 
         <!-- ====================Total========================= -->
 
-        <button style="height:70px;width:205px" onclick="enterCost();">Enter</button>
+        <button id="enters" onclick="enterCost();">Enter</button>
 
-        <button style="height:70px;width:205px" onclick="resetTotal();">Reset</button>
+        <button id="enters" onclick="resetTotal();">Reset</button>
 
         <br><br>
 
-        <button style="height:70px;width:415px" onclick="adminTotal();">Admin</button>
+        <button id="admin" onclick="adminTotal();">Admin</button>
     </div>
 
     <div id="log"></div>
